# BuildFest25

./: .gitignore  connect.py  datafeel.py  datafeel_example.py  inference.py  main.py  main2.py  pyproject.toml  screenshot.py  utils.py
cv/: inftest.py  main.py
datafeel/: Manager.py
